--- a/Projeto-inicial-spotify/estilo.css
+++ b/Projeto-inicial-spotify/estilo.css
@@ -17,7 +17,7 @@ body{
 				linear-gradient(50deg,#ff4169,#7c26f8);				
 	background-attachment: fixed;
 	font-family: Helvetica,Arial,sans-serif;
-
+	overflow-x: hidden;
 }
 
 /* -- Barra de navegação -- */
@@ -48,12 +48,13 @@ nav.navbar-transparente{
 	margin: 16px 10px;
 }
 
-.navbar-inverse .navbar-nav>li>a{
+.navbar-inverse .navbar-nav>li>a, #rodape .nav a{
 	color: white;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover{
+.navbar-inverse .navbar-nav>li>a:hover, #rodape .nav a:hover{
 	color: #9bf0e1;
+	background: none;
 }
 
 /* -- Imagem de capa -- */
@@ -99,6 +100,41 @@ nav.navbar-transparente{
 	color: black;
 }
 
+/* -- secao servico -- */
+#servicos{
+	background: white;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.albuns{
+	padding: 10px 0px 10px 0px;
+}
+
+#recursos{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: white;
+}
+
+.rotacionar{
+	transform: rotate(30deg);
+	-ms-transform: rotate(30deg); /*IE 9*/
+	-webkit-transform: rotate(30deg); /*Chrome, Safari, Opera*/
+	padding-left: 80px;
+}
+
+/* -- rodape -- */
+footer{
+	background: #000;
+	padding: 50px 0px 20px 0px;
+	position: relative;
+}
+
+.item-rede-social{
+	float: right;
+}
+
 
 /* ============== tipografia ============== */
 h1{
@@ -106,4 +142,30 @@ h1{
 	font-weight: 900;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
+}
+
+h2{
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: 0.04em;
+}
+
+h3{
+	font-size: 35px;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+
+#rodape h4{
+	color: #919496;
+	font-size: 12px;
+	text-transform: uppercase;
+}
+
+#servicos h2, #servicos h3 {
+	color: #7c25f8;
+}
+
+#recursos h3{
+	color: #9bf0e1;
 }
