Game Estorando Baloes

--- a/Projeto-inicial-spotify/estilo.css
+++ b/Projeto-inicial-spotify/estilo.css
@@ -11,7 +11,7 @@ html, body, .capa{
 }
 
 body{
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	background: url('imagens/capa.png'),
 				url('imagens/ruido.png'),
 				linear-gradient(50deg,#ff4169,#7c26f8);				
